Messages are working

--- a/src/main/resources/com/lagopusempire/teleconfirmlite/messages.conf
+++ b/src/main/resources/com/lagopusempire/teleconfirmlite/messages.conf
@@ -1,9 +1,1 @@
-targetAccept: "Accepted request from {player}."
-targetDeny: "Denied request from {player}."
-senderAccept: "{player} has accepted your teleport request!"
-senderDeny: "{player} has denied your teleport request!"
-gotoRequestSender: "Request sent to {player}"
-gotoRequestTarget: "{player} would like to teleport to you! To accept this, type /tpca. To deny, type /tpcd."
-comeHereRequestSender: "Request sent to {player}"
-comeHereRequestTarget: "{player} would like you to teleport to them! To accept this, type /tpca. To deny, type /tpcd."
-pendingRequest: "{player} already has a pending request!"
+player_only: "&cThis command can only be used by players!"
