I've confirmed that the text template is a pain to work with

--- a/src/main/resources/com/lagopusempire/teleconfirmlite/messages.conf
+++ b/src/main/resources/com/lagopusempire/teleconfirmlite/messages.conf
@@ -1,1 +1,3 @@
 player_only: "&cThis command can only be used by players!"
+sender_request_to: "&2Request to teleport to {player} sent!"
+target_request_to: "&2{sender} has requested to teleport to you! To accept this, type /tpca. To deny, type /tpcd."
