tpcd command implemented.

--- a/src/main/resources/com/lagopusempire/teleconfirmlite/messages.conf
+++ b/src/main/resources/com/lagopusempire/teleconfirmlite/messages.conf
@@ -5,3 +5,4 @@ sender_request_here: "&2Request for %target% to teleport to you sent!"
 target_request_here: "&2%sender% has requested for you to teleport to them! To accept this, type /tpca. To deny, type /tpcd."
 no_pending_request: "&cYou don't have any pending requests!"
 target_offline: "&c%target% is not online!"
+request_denied: "&2%target%'s teleport request has been denied."
