tpcclear command implemented

--- a/src/main/resources/com/lagopusempire/teleconfirmlite/messages.conf
+++ b/src/main/resources/com/lagopusempire/teleconfirmlite/messages.conf
@@ -7,3 +7,4 @@ no_pending_request: "&cYou don't have any pending requests!"
 target_offline: "&c%target% is not online!"
 sender_request_denied: "&2%target%'s teleport request has been denied."
 target_request_denied: "&2%sender% has denied your teleport request."
+reques_cleared: "&2Request (from %target%) cleared!"
