notify if player already has a pending request.

--- a/src/main/resources/com/lagopusempire/teleconfirmlite/messages.conf
+++ b/src/main/resources/com/lagopusempire/teleconfirmlite/messages.conf
@@ -8,3 +8,5 @@ target_offline: "&c%target% is not online!"
 sender_request_denied: "&2%target%'s teleport request has been denied."
 target_request_denied: "&2%sender% has denied your teleport request."
 reques_cleared: "&2Request (from %target%) cleared!"
+target_already_has_request: "&c%sender% tried to send you a teleport request, but you already have a pending request!"
+sender_already_has_request: "&cFailed to send request to %target%, as %target% already has a pending request!";
