tpcback command implemented.

--- a/src/main/resources/com/lagopusempire/teleconfirmlite/messages.conf
+++ b/src/main/resources/com/lagopusempire/teleconfirmlite/messages.conf
@@ -13,3 +13,4 @@ sender_already_has_request: "&cFailed to send request to %target%, as %target% a
 sender_now_accepting_requests: "&2You are now accepting requests."
 sender_no_longer_accepting_requests: "&2You are no longer accepting requests."
 target_not_accepting_requests: "&c%target% is not accepting requests!"
+no_prior_loc: "&cYou do not have a prior location to return to!"
