--- a/src/main/resources/com/lagopusempire/teleconfirmlite/messages.yml
+++ b/src/main/resources/com/lagopusempire/teleconfirmlite/messages.yml
@@ -1,16 +1,22 @@
-player_only: "&cThis command can only be used by players!"
-sender_request_to: "&2Request to teleport to %target% sent!"
-target_request_to: "&2%sender% has requested to teleport to you! To accept this, type /tpca. To deny, type /tpcd."
-sender_request_here: "&2Request for %target% to teleport to you sent!"
-target_request_here: "&2%sender% has requested for you to teleport to them! To accept this, type /tpca. To deny, type /tpcd."
+player_only: '&cThis command can only be used by players!'
+request:
+    to:
+        sender: '&2Request to teleport to %target% sent!'
+        target: '&2%sender% has requested to teleport to you! To accept this, type /tpca. To deny, type /tpcd.'
+    here:
+        sender: '&2Request for %target% to teleport to you sent!'
+        target: '&2%sender% has requested for you to teleport to them! To accept this, type /tpca. To deny, type /tpcd.'
+    denied:
+        sender: '&2%target%''s teleport request has been denied.'
+        target: '&2%sender% has denied your teleport request.'
+    already_has:
+        sender: '&cFailed to send request to %target%, as %target% already has a pending request!'
+        target: '&c%sender% tried to send you a teleport request, but you already have a pending request!'
 no_pending_request: "&cYou don't have any pending requests!"
 target_offline: "&c%target% is not online!"
-sender_request_denied: "&2%target%'s teleport request has been denied."
-target_request_denied: "&2%sender% has denied your teleport request."
 request_cleared: "&2Request (from %target%) cleared!"
-target_already_has_request: "&c%sender% tried to send you a teleport request, but you already have a pending request!"
-sender_already_has_request: "&cFailed to send request to %target%, as %target% already has a pending request!"
-sender_now_accepting_requests: "&2You are now accepting requests."
-sender_no_longer_accepting_requests: "&2You are no longer accepting requests."
+sender_accepting_requests:
+    yes: '&2You are now accepting requests.'
+    no: '&2You are no longer accepting requests.'
 target_not_accepting_requests: "&c%target% is not accepting requests!"
 no_prior_loc: "&cYou do not have a prior location to return to!"
