--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.lagopusempire</groupId>
     <artifactId>teleconfirmlite</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>TeleConfirmLite</name>
     <description>
         Sponge Plugin that allows players to request to teleport to each other!
